# snake-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: Config.h  Food.h  Game.h  Snake.h
src/: Config.cpp  Food.cpp  Game.cpp  Snake.cpp  main.cpp
